# ShaarliOS

./: .gitattributes  .gitignore  .travis.yml  Makefile  README.md  cc-by.LICENSE.txt  cgi.url  doap.rdf  gplv3.LICENSE.txt  human.LICENSE.txt  post.curl.sh  zlib.LICENSE.txt
appstore/: Deliverfile  versions.ttl
appstore/metadata/: copyright.txt
cgi/: README.md  build.sh  openapi.yaml  post.msc  shaarlios_test.go
cgi/go/: mini-build.sh  post.msc  shaarlios.go
cgi/ocaml/: .gitignore  Makefile  Pinboard.ml  README.md  dune-project  openapi.yaml  pin4sha.opam
cgi/ocaml/lib/: Html.ml  Shaarli.ml  cgi.ml  dune  shell.ml
cgi/ocaml/test/: dune  simple_test.ml  soup_test.configure.1.html  soup_test.ml
ios/: Common.xcconfig  Debug.xcconfig  Release.xcconfig  images.sh
ios/ShaarliCompanion/: AppDelegate.h  AppDelegate.m  Info.plist  MainVC.h  MainVC.m  SettingsVC.h  SettingsVC.m  ShaarliCompanion-Prefix.pch  ShaarliM.h  ShaarliM.m  ViewController.h  ViewController.m  main.m
ios/ShaarliCompanion.xcodeproj/: project.pbxproj
ios/ShaarliCompanionTests/: Info.plist  ShaarliCompanionTests.m  ShaarliMTest.m
ios/ShaarliOS/: AppDelegate.h  AppDelegate.m  Info.plist  MainVC.h  MainVC.m  SettingsVC.h  SettingsVC.m  ShaarliM.h  ShaarliM.m  ShaarliOS-Prefix.pch  about.html  main.m
ios/ShaarliOS.xcodeproj/: project.pbxproj
ios/ShaarliOSTests/: Info.plist  ShaarliMTest.m  ShaarliOSTests.m  ShaarliParseStateTest.m  ShaarliResponseXPathTest.m  ShaarliResponseXsltTest.m  response.xslt  (+4 more)
swift4/: images.sh  testplan.txt
templates/: document-mathjax.html  document-toc.latex
(+150 files in other folders)
