opam-version: "2.0"
version: "0.0.1"
maintainer: "rohrmoser@0x4c.de"
authors: ["Marcus Rohrmoser"]
homepage: "https://code.mro.name/mro/pin4sha"
bug-reports: "https://notabug.org/mro/pin4sha/issues"
dev-repo: "git+https://code.mro.name/mro/pin4sha.git"
license: "GPL-3"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
